@@ -1,3 +1,3 @@
-foreach cmd {env makeurl} {
+foreach cmd [lsort [array names ::failtest]] {
     puts "$cmd->$::failtest($cmd)"
 }
